--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
-remote_theme: pages-themes/midnight@v0.2.0
+# Site settings
+title: AnatolyKustanovich
+author:
+  name: Anatoly Kustanovich
+  email: your-email@domain.com
+description: "Python WIS course."
+
+# Build settings
+remote_theme: jekyll/minimaremote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
