--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ author:
 description: "Python WIS course."
 
 # Build settings
-remote_theme: jekyll/minimaremote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
